# ros2-ws-gateway

./: .gitignore  Dockerfile  LICENSE.md  README.md  build_gw.sh  run_gw.sh
mrosapi/: README.md
mrosapi/rosapi/src/rosapi/: objectutils.py
rosext/: CMakeLists.txt  LICENSE  README.md  package.xml
rosext/include/rosext/: create_generic_pubsub.hpp  extnode.hpp  extnode_impl.hpp  generic_publisher.hpp  generic_subscription.hpp  generic_type_support.hpp
rosext/src/: extnode.cpp  generic_publisher.cpp  generic_subscription.cpp  generic_type_support.cpp
rosextpy/: CMakeLists.txt  client_test.sh  cns_test.sh  endpoint_test.sh  package.xml  requirements.txt
rosextpy/launch/: gateway_launch.xml
rosextpy/rosextpy/: __init__.py  ext_type_support.py  mod_config.py  myconfig.json  node_manager.py  ros_gateway_agent.py  ros_rpc_gateway_client.py  ros_type_pkg_code_template.py  ros_type_support_manager.py  ros_ws_gateway.py  ros_ws_gateway_client.py  ros_ws_gateway_endpoint.py  testros.json  websocket_utils.py
rosextpy/rosextpy/app/: __init__.py  ros_gateway_service.py
rosextpy/scripts/: run_gateway
rosextpy/src/: common.cpp  rosextpy.cpp
